force-app/main/default/objects/Pilot_Schedule__c/Pilot_Schedule__c.object-meta.xml
<CustomObject>
    <label>Pilot Schedule</label>
    <nameField>
        <displayFormat>PScheduleName-{0000}</displayFormat>
        <label>Pilot Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pilot Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>