force-app/main/default/objects/Pilot_Schedule__c/fields/First_Pilot_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Pilot_Name__c</fullName>
    <formula>Select_Pilot_1__r.First_Name__c + &apos; &apos; + Select_Pilot_1__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Pilot Name</label>
    <type>Text</type>
</CustomField>