force-app/main/default/objects/Pilot_Schedule__c/fields/Flight_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Flight_Schedule__c</fullName>
    <label>Flight Schedule</label>
    <referenceTo>Flight_Schedule__c</referenceTo>
    <relationshipLabel>Pilot Schedules</relationshipLabel>
    <relationshipName>Pilot_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>