force-app/main/default/objects/Pilot_Schedule__c/fields/Name_of_First_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Name_of_First_Pilot__c</fullName>
    <formula>Select_Pilot_1__r.First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name of First Pilot</label>
    <type>Text</type>
</CustomField>