force-app/main/default/objects/Pilot_Schedule__c/fields/New_Schedule__c.field-meta.xml
<CustomField>
    <fullName>New_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Schedule</label>
    <type>Checkbox</type>
</CustomField>