force-app/main/default/objects/Pilot_Schedule__c/fields/Pilot_1_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Pilot_1_Email_ID__c</fullName>
    <label>Pilot 1 Email  ID</label>
    <type>Email</type>
</CustomField>