force-app/main/default/objects/Pilot_Schedule__c/fields/Pilot_2_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Pilot_2_Email_ID__c</fullName>
    <label>Pilot 2 Email  ID</label>
    <type>Email</type>
</CustomField>