force-app/main/default/objects/Pilot_Schedule__c/fields/Select_Pilot_1__c.field-meta.xml
<CustomField>
    <fullName>Select_Pilot_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select Pilot 1</label>
    <referenceTo>Pilot__c</referenceTo>
    <relationshipLabel>Pilot Schedules</relationshipLabel>
    <relationshipName>Pilot_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>