force-app/main/default/objects/Pilot_Schedule__c/fields/Select_Pilot_2__c.field-meta.xml
<CustomField>
    <fullName>Select_Pilot_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select Pilot 2</label>
    <referenceTo>Pilot__c</referenceTo>
    <relationshipLabel>Pilot Schedules (Select Pilot 2)</relationshipLabel>
    <relationshipName>Pilot_Schedules1</relationshipName>
    <type>Lookup</type>
</CustomField>