force-app/main/default/objects/Pilot_Schedule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Flight_Schedule__c</columns>
    <columns>Select_Pilot_1__c</columns>
    <columns>Select_Pilot_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>